# snakehook-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-validate.yml
container/: Dockerfile  entrypoint.sh  nsjail.cfg
scripts/: manual_smoke.sh
src/snakehook_runner/: __init__.py  main.py
src/snakehook_runner/api/: routes.py  schemas.py
src/snakehook_runner/core/: auth.py  concurrency.py  config.py  egress_rules.py  interfaces.py  orchestrator.py  policy.py  queue_gate.py  rate_limit.py  service.py
src/snakehook_runner/infra/: compression.py  nftables_renderer.py  nsjail_executor.py  pip_installer.py  process_runner.py  runtime_paths.py  webhook_client.py
src/snakehook_runner/templates/: audit_report.html
tests/: conftest.py
tests/integration_mocked/: test_api.py  test_api_denylist.py  test_healthz.py
tests/unit/: test_auth.py  test_config.py  test_egress_rules.py  test_main.py  test_nftables_renderer.py  test_nsjail_executor.py  test_orchestrator.py  test_pip_installer.py  test_process_runner.py  test_queue_gate.py  test_rate_limit.py  test_runtime_paths.py  test_service.py  test_webhook_client.py  test_worker_pool.py
